<resources>
    <string name="app_name">SDK_Demo</string>
    <string name="main_toolbar_title">SDK DEMO</string>
    <string name="main_full_demo_button">Full Demo</string>
    <string name="main_full_demo_desc">Show the overall process of Camera Connect, Obtain SdCard/Battery status, Open Preview Stream, Record/Capture/Live</string>
    <string name="main_item_desc_connect">Connect/Disconnect Camera</string>
    <string name="main_connect_wifi_button">Connect by WIFI</string>
    <string name="main_connect_usb_button">Connect by USB</string>
    <string name="main_connect_ble_button">Connect by BLE</string>
    <string name="main_disconnect_button">Disconnect</string>
    <string name="main_item_desc_camera_fun">Camera Function -- Need to connect camera first</string>
    <string name="main_capture_button">Capture</string>
    <string name="main_capture_desc">Normal Capture &amp; Record, HDR Capture &amp; Record, Interval Shooting, TimeLapse…</string>
    <string name="main_preview_button">Preview</string>
    <string name="main_preview_desc">Normal Mode. Can switch the aspect ratio, adjust the angle of view, switch panorama and plane mode</string>
    <string name="main_preview2_button">Preview2</string>
    <string name="main_preview2_desc">Use Custom SurfaceView</string>
    <string name="main_preview3_button">Preview3</string>
    <string name="main_preview3_desc">Get Bitmap by ImageReader</string>
    <string name="main_live_button">Live</string>
    <string name="main_live_desc">Can customize push streaming parameters, use panorama or screen live mode</string>
    <string name="main_osc_button">OSC</string>
    <string name="main_osc_desc">OSC protocol controls the camera and can be used without sdk. For more details, please refer to Google documentation</string>
    <string name="main_setting_button">Settings</string>
    <string name="main_setting_desc">Include EV value, beep switch, gyroscope correction, formatted SD card, etc.</string>
    <string name="main_item_desc_other">Other</string>
    <string name="main_camera_file_button">Camera file list</string>
    <string name="main_camera_file_desc">Scanning all the files of the camera</string>
    <string name="main_play_button">Play &amp; Export</string>
    <string name="main_play_desc">Show play and export video and image (panorama and thumbnail), both local and camera files are available</string>
    <string name="main_stitch_button">HDR stitching</string>
    <string name="main_stitch_desc">Show HDR stitching and playback. Only local images can be stitch, please download from the camera first</string>
    <string name="main_fw_upgrade_button">Firmware upgrade</string>
    <string name="main_fw_upgrade_desc">Upload the firmware upgrade package (.bin file) to the camera for upgrade</string>
    <string name="main_toast_camera_connected">Camera connected</string>
    <string name="main_toast_camera_disconnected">Camera disconnected</string>
    <string name="main_toast_camera_connect_error">Camera connect failed %d</string>
    <string name="main_toast_sd_enabled">SD card is enabled</string>
    <string name="main_toast_sd_disabled">SD card may be some error</string>
    <string name="ble_toolbar_title">Ble Scan &amp; Connect</string>
    <string name="ble_prompt_permission">Compatible adaptation: Some devices need to be granted Location permission and GPS Provider is enabled to scan Bluetooth, please deal with it according to product adaptation requirements.\n\nNote: Do not rescan frequently in a short period of time. The Android system has a limit of 5 scans within 30s. If scan too frequently, it may be started successfully but the device cannot be searched.</string>
    <string name="ble_state_start_scan">Start scan</string>
    <string name="ble_state_start_failed">Scan failed</string>
    <string name="ble_state_scanning">Scanning...</string>
    <string name="ble_state_scan_finish">Scan finished</string>
    <string name="ble_state_connecting">Camera connecting</string>
    <string name="full_demo_sd_remaining_space">SD Card: remain %s</string>
    <string name="full_demo_sd_error">SD Card: Not insert or Not enough free space</string>
    <string name="full_demo_battery_level">Battery：%d%%</string>
    <string name="full_demo_charging">Charging</string>
    <string name="full_demo_record">Record</string>
    <string name="full_demo_capture">Capture</string>
    <string name="full_demo_live">Live</string>
    <string name="full_demo_start">Start</string>
    <string name="full_demo_stop">Stop</string>
    <string name="full_demo_prompt_connect_camera">Please connect camera</string>
    <string name="full_demo_connect_by_wifi">By WIFI</string>
    <string name="full_demo_connect_by_usb">By USB</string>
    <string name="full_demo_live_start">Live Started</string>
    <string name="full_demo_live_error">Live Error</string>
    <string name="capture_toolbar_title">Capture &amp; Listener</string>
    <string name="capture_prompt_nanos_osc">Note: Nanos Camera doesn\'t support the API on this page. You need to use the OSC protocol to control the camera. For details, refer to OscActivity.</string>
    <string name="capture_switch_panorama_sensor">Panorama Sensor</string>
    <string name="capture_switch_front_sensor">Front Sensor</string>
    <string name="capture_switch_rear_sensor">Rear Sensor</string>
    <string name="capture_switch_sensor_ing">Switching Sensor</string>
    <string name="capture_switch_sensor_success">Switch successfully</string>
    <string name="capture_switch_sensor_failed">Switch failed</string>
    <string name="capture_switch_sensor_camera_connect_error">Camera is not connected</string>
    <string name="capture_normal_capture">Normal Capture</string>
    <string name="capture_normal_capture_pure_shot">Normal Capture (PureShot)</string>
    <string name="capture_normal_pano_capture">Insta Pano Mode Normal Capture</string>
    <string name="capture_hdr_capture">HDR Capture</string>
    <string name="capture_hdr_pano_capture">Insta Pano Mode HDR Capture</string>
    <string name="capture_interval_shooting_start">Start Interval Capture</string>
    <string name="capture_interval_shooting_stop">Stop Interval Capture</string>
    <string name="capture_normal_record_start">Start Normal Record</string>
    <string name="capture_normal_record_stop">Stop Normal Record</string>
    <string name="capture_hdr_record_start">Start HDR Record</string>
    <string name="capture_hdr_record_stop">Stop HDR Record</string>
    <string name="capture_timelapse_start">Start TimeLapse</string>
    <string name="capture_timelapse_stop">Stop TimeLapse</string>
    <string name="capture_capture_starting">Capture Starting...</string>
    <string name="capture_capture_working">Capture Working...</string>
    <string name="capture_capture_stopping">Capture Stopping...</string>
    <string name="capture_capture_finished">Capture Finished</string>
    <string name="capture_capture_time">CaptureTime: %s</string>
    <string name="capture_capture_count">Capture Count: %d</string>
    <string name="capture_play_camera_file">Play Camera File</string>
    <string name="capture_play_local_file">Download and Play Local File</string>
    <string name="capture_toast_sd_card_error">No SD card inserted or Not enough free space</string>
    <string name="preview_toolbar_title">Preview -- Normal Mode</string>
    <string name="preview_angle">Preview Type:</string>
    <string name="preview_mode_normal">Normal</string>
    <string name="preview_mode_fisheye">Fisheye</string>
    <string name="preview_mode_perspective">Perspective</string>
    <string name="preview_mode_plane">Plane</string>
    <string name="stab_type">Stabilizing Type:</string>
    <string name="stab_type_auto">Auto Select</string>
    <string name="stab_type_panorama">For Panorama</string>
    <string name="stab_type_calibrate_horizon">Align the horizon only</string>
    <string name="stab_type_footage_motion_smooth">Smooth footage motion, no horizon alignment</string>
    <string name="stab_type_off">OFF</string>
    <string name="choose_resolution">Resolution Selection:</string>
    <string name="preview2_toolbar_title">Preview -- Custom SurfaceView</string>
    <string name="preview2_show">Show</string>
    <string name="preview2_hide">Hide</string>
    <string name="preview3_toolbar_title">Preview -- Get Bitmap by ImageReader</string>
    <string name="live_toolbar_title">Live</string>
    <string name="live_paramter_rtmp">RTMP:</string>
    <string name="live_paramter_width">width:</string>
    <string name="live_paramter_height">height:</string>
    <string name="live_paramter_fps">fps:</string>
    <string name="live_paramter_bitrate">bitrate:</string>
    <string name="live_paramter_panorama">isPanorama</string>
    <string name="live_paramter_audio_enabled">Enable Audio</string>
    <string name="live_start_live">Start Live</string>
    <string name="live_stop_live">Stop Live</string>
    <string name="live_push_started">Live Push Started</string>
    <string name="live_push_finished">Live Push Finished</string>
    <string name="live_push_error">Live Push Error</string>
    <string name="live_fps_update">Living...  FPS: %d</string>
    <string name="live_toast_input_parameters">Please input all parameters</string>
    <string name="live_toast_invalid_rtmp">Rtmp address is not valid</string>
    <string name="live_bind_mobile_network_desc">Bind mobile network, then you can use 4G to push live streaming when connecting camera by WIFI</string>
    <string name="live_bind">Bind</string>
    <string name="live_unbind">Unbind</string>
    <string name="live_toast_bind_mobile_network_successful">Bind mobile network successful</string>
    <string name="live_toast_bind_mobile_network_failed">Bind mobile network failed</string>
    <string name="live_toast_unbind_mobile_network">Unbind mobile network</string>
    <string name="live_toast_unbind_mobile_network_when_lost">Lost mobile network, temporarily unbind</string>
    <string name="osc_toolbar_title">OSC</string>
    <string name="osc_support_options">Support Options</string>
    <string name="osc_take_picture">Take Picture (HDR)</string>
    <string name="osc_take_picture_device_stitching">Take Picture (HDR)(Device Stitching)</string>
    <string name="osc_start_record">Start Record</string>
    <string name="osc_stop_record">Stop Record</string>
    <string name="osc_get_exposure_params">Get Exposure\nParams</string>
    <string name="osc_switch_front_sensor_capture">Front Sensor\nCapture</string>
    <string name="osc_switch_rear_sensor_capture">Rear Sensor\nCapture</string>
    <string name="osc_separated_fisheye_stitch">Stitch\nTwo Fisheye</string>
    <string name="osc_dialog_title_send_request">Send Request</string>
    <string name="osc_dialog_msg_send_request">Sending request, please wait...</string>
    <string name="osc_dialog_title_success">Successful</string>
    <string name="osc_dialog_msg_no_data">No data returned</string>
    <string name="osc_dialog_title_failed">Failed</string>
    <string name="osc_dialog_title_downloading">Downloading Files</string>
    <string name="osc_dialog_msg_downloading">"Total %1$d, Successful %2$d, Failed %3$d</string>
    <string name="osc_toast_connect_camera">Please connect to camera first</string>
    <string name="osc_toast_get_exposure_params">Please get exposure params first</string>
    <string name="osc_toast_capture_front_sensor">Please take picture with front sensor first</string>
    <string name="osc_toast_capture_rear_sensor">Please take picture with rear sensor first</string>
    <string name="osc_exposure_params">Exposure Params: %s</string>
    <string name="osc_front_path">Front Sensor File Path: %s</string>
    <string name="osc_rear_path">Rear Sensor File Path: %s</string>
    <string name="osc_stitch_path">Stitch Output File Path: %s</string>
    <string name="setting_toolbar_title">Camera Settings</string>
</resources>